# TheGrapefruitsDuo

./: README.md
.github/workflows/: client-build.yml  server-build.yml
client/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
client/.github/workflows/: build.yml
client/src/: App.css  App.tsx  BackgroundStyle.tsx  api.tsx  index.css  main.tsx
client/src/Auth/: Profile.tsx  User.tsx
client/src/Buttons/: Login.tsx  Logout.tsx
client/src/Cld/: CloudinaryConfig.ts
client/src/EditModals/: EditModal.tsx
client/src/EmailSignupButton/: EmailSignupButton.css  EmailSignupButton.tsx
client/src/ErrorModal/: ErrorModal.tsx
client/src/Footer/: Footer.tsx
client/src/Group/: Group.css  Group.tsx
client/src/LivestreamPlayer/: LivestreamPlayer.tsx
server/: .env.example  .gitignore  README.md  pyproject.toml
server/app/: main.py
server/app/admin/: __init__.py  contact.py  images.py  oauth_token.py
server/app/constants/: __init__.py
server/app/controllers/: __init__.py  base_controller.py  controller.py  events.py  group.py  musicians.py  users.py
server/app/db/: __init__.py  base_queries.py  conn.py  events.py  group.py  musicians.py  users.py
server/app/models/: event.py  group.py  musician.py  tgd.py  user.py
server/app/routers/: __init__.py  contact.py  events.py  group.py  musicians.py  users.py
server/app/scripts/: DDL.sql  run.py  run.sh  seed.py
server/tests/controllers/: test_event_controller.py  test_group_controller.py  test_main_controller.py  test_musician_controller.py  test_user_controller.py
(+28 files in other folders)
